Adds search box and button

--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
 </head>
 <body>
 
-<h2> This is a dataset on aids statistics.</h2>
+<h2> This is a dataset on AIDS statistics.</h2>
 
+<label>Enter a keyword or number:
+    <input type="text" id="input">
+</label>
+<button id="search-button">Get Statistics</button>
 
+<div id="result"></div>
 
 </body>
 </html>
