--- a/index.html
+++ b/index.html
@@ -8,12 +8,38 @@
 
 <h2> This is a dataset on AIDS statistics.</h2>
 
-<label>Enter a keyword or number:
+<!--search box and button-->
+<label>Enter a country:
     <input type="text" id="input">
 </label>
 <button id="search-button">Get Statistics</button>
 
+<!--results print here-->
 <div id="result"></div>
+
+
+
+
+<!--script to manipulate json file-->
+<script src="//code.jquery.com/jquery.js"></script>
+
+<script>
+    //search when clicked
+    $("#search-button").on("click", function(){
+
+        //get the search term
+        let search = $("#input").val().toLowerCase();
+
+        $.getJSON("aids.json", function(result) {
+
+            $.each(result, function(index, item) {
+                if (item["Country"].toLowerCase().includes(search)) {
+                    $("#result").append("<h3><u>" + item["Country"] + "</u></h3>" + " Year: " + item["Year"]);
+                }
+            });
+        });
+    });
+</script>
 
 </body>
 </html>
