--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 <h2> This is a dataset on AIDS statistics.</h2>
 
 <!--search box and button-->
-<label>Enter a country:
+<label>Enter a Country to see data for the year 2020:
     <input type="text" id="input">
 </label>
 <button id="search-button">Get Statistics</button>
 
 <!--results print here-->
 <div id="result"></div>
+<div id="data"></div>
 
 
 
@@ -34,7 +35,16 @@
 
             $.each(result, function(index, item) {
                 if (item["Country"].toLowerCase().includes(search)) {
-                    $("#result").append("<h3><u>" + item["Country"] + "</u></h3>" + " Year: " + item["Year"]);
+                    $("#result").html("<h3>" + item["Country"] + "</h3>");
+                    $("#data").html( "<u>AIDS-related deaths: " + "</u>"
+                        + "<br> AIDS Orphans: "+ item["Data"]["AIDS-Related Deaths"]["AIDS Orphans"]
+                        + "<br> Adults: "+ item["Data"]["AIDS-Related Deaths"]["Adults"]
+                        + "<br> All Ages: "+ item["Data"]["AIDS-Related Deaths"]["All Ages"]
+                        + "<br> Children: "+ item["Data"]["AIDS-Related Deaths"]["Children"]
+                        + "<br> Female Adults: "+ item["Data"]["AIDS-Related Deaths"]["Female Adults"]
+                        + "<br> Male Adults: "+ item["Data"]["AIDS-Related Deaths"]["Male Adults"] +"<br>"
+                        +"<br>");
+
                 }
             });
         });
