Adds result for number of people living with HIV

--- a/index.html
+++ b/index.html
@@ -18,9 +18,6 @@
 <div id="result"></div>
 <div id="data"></div>
 
-
-
-
 <!--script to manipulate json file-->
 <script src="//code.jquery.com/jquery.js"></script>
 
@@ -43,6 +40,13 @@
                         + "<br> Children: "+ item["Data"]["AIDS-Related Deaths"]["Children"]
                         + "<br> Female Adults: "+ item["Data"]["AIDS-Related Deaths"]["Female Adults"]
                         + "<br> Male Adults: "+ item["Data"]["AIDS-Related Deaths"]["Male Adults"] +"<br>"
+                        +"<br>"
+                        + "<u>People Living with HIV: " + "</u>"
+                        + "<br> Total: "+ item["Data"]["People Living with HIV"]["Total"]
+                        + "<br> Adults: "+ item["Data"]["People Living with HIV"]["Adults"]
+                        + "<br> Children: "+ item["Data"]["People Living with HIV"]["Children"]
+                        + "<br> Female Adults: "+ item["Data"]["People Living with HIV"]["Female Adults"]
+                        + "<br> Male Adults: "+ item["Data"]["People Living with HIV"]["Male Adults"] +"<br>"
                         +"<br>");
 
                 }
